<?xml version='1.0' encoding='UTF-8'?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gstreamer_ros_babel_fish</name>
  <version>1.26.40</version>
  <description>GStreamer elements for bidirectional ROS 2 image streaming</description>
  <maintainer email="gstreamer_ros_babel_fish@stefanfabian.com">Stefan Fabian</maintainer>
  <license>AGPL-3.0-only</license>

  <url type="repository">https://github.com/StefanFabian/gstreamer_ros_babel_fish</url>
  <url type="bugtracker">https://github.com/StefanFabian/gstreamer_ros_babel_fish/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libgstreamer-plugins-base1.0-dev</build_depend>
  <build_depend>libgstreamer1.0-dev</build_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>gstreamer1.0</exec_depend>
  <exec_depend>gstreamer1.0-plugins-base</exec_depend>
  <exec_depend>gstreamer1.0-plugins-good</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
